[package]
name = "pngcompressor"
version = "0.1.0"
description = "fast png compressing using oxipng"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-5"]

[dependencies]
oxipng = "4.0.3"
